--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,2 +1,109 @@
 .sidebar {
+  display: flex;
+  flex-direction: row;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  height: 98vh;
+  color: white;
+  width: 20vw;
+  background: rgba(94, 101, 139, 0.41);
+  border-radius: 2px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.9px);
+  -webkit-backdrop-filter: blur(3.9px);
+  border: 1px solid rgba(94, 101, 139, 0.28);
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+  margin-top: 20px;
+  text-transform: uppercase;
+}
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 200px;
+
+  background: rgba(114, 102, 102, 0.52);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(11.5px);
+  -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(114, 102, 102, 0.68);
+}
+
+.image {
+  margin-top: 30px;
+  background-image: url('../assets/myimg.jpeg');
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-size: cover;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 150px;
+}
+
+.homebtn {
+  cursor: pointer;
+  width: 200px;
+  height: 35px;
+
+  margin-bottom: 6vh;
+
+  color: white;
+  font-size: 16px;
+
+  background: rgba(111, 234, 204, 0.72);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(12.2px);
+  -webkit-backdrop-filter: blur(12.2px);
+  border: 1px solid rgba(111, 234, 204, 1);
+}
+
+.projectbtn {
+  cursor: pointer;
+  width: 200px;
+  height: 35px;
+  margin-bottom: 6vh;
+
+  color: white;
+  font-size: 16px;
+
+  background: rgba(111, 234, 204, 0.72);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(12.2px);
+  -webkit-backdrop-filter: blur(12.2px);
+  border: 1px solid rgba(111, 234, 204, 1);
+}
+
+.cvbtn {
+  cursor: pointer;
+  width: 200px;
+  height: 35px;
+  margin-bottom: 30px;
+
+  color: white;
+  font-size: 16px;
+
+  background: rgba(111, 234, 204, 0.72);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(12.2px);
+  -webkit-backdrop-filter: blur(12.2px);
+  border: 1px solid rgba(111, 234, 204, 1);
 }
