--- a/src/styles/mycv.scss
+++ b/src/styles/mycv.scss
@@ -1,4 +1,4 @@
-.bg-red {
+.cv-bg {
   display: flex;
   position: absolute;
   top: 10px;
@@ -6,7 +6,7 @@
   width: 75vw;
   height: 97vh;
 
-  background: rgba(244, 48, 48, 0.1);
+  background: rgba(81, 191, 34, 0.1);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(4.9px);
