--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@ iframe {
 }
 
 body {
-  background-image: url('./assets/bg-img.jpg');
+  background-image: url('../public/assets/bg-img.jpg');
   background-size: cover;
   overflow: hidden;
 }
