--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -41,7 +41,7 @@
 
 .image {
   margin-top: 30px;
-  background-image: url('../assets/myimg.jpeg');
+  background-image: url('../../public/assets/myimg.jpeg');
   width: 200px;
   height: 200px;
   border-radius: 50%;
