in progress with redesign

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 .app {
   display: flex;
-  flex-direction: row;
+  // flex-direction: column;
 }
+
 .body {
   display: flex;
   flex-direction: column;
