--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -4,14 +4,9 @@
   justify-content: center;
   top: 10px;
   margin-left: 400px;
+  margin-top: 100px;
   width: 75vw;
   height: 97vh;
-
-  background: rgba(52, 109, 223, 0.1);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(4.9px);
-  -webkit-backdrop-filter: blur(4.9px);
 }
 
 .proj-title {
