--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,19 +1,22 @@
+@font-face {
+  font-family: 'Roboto-Regular'; // You can name it whatever you like
+  src: url('../fonts/Roboto-Regular.ttf');
+}
+
 .sidebar {
   display: flex;
+  margin-top: 108px;
+  flex-direction: column;
+  margin-left: 74px;
 }
 
 .header {
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 98vh;
-  width: 350px;
+  width: 262px;
   color: white;
-  background: rgba(94, 101, 139, 0.41);
-  border-radius: 2px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(3.9px);
-  -webkit-backdrop-filter: blur(3.9px);
-  border: 1px solid rgba(94, 101, 139, 0.28);
 }
 
 .about {
@@ -21,88 +24,42 @@
   flex-direction: column;
   align-items: center;
   font-size: 18px;
-  margin-top: 20px;
   text-transform: uppercase;
+  width: 192px;
+  margin-top: 24px;
 }
 .title {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 30px;
-  width: 200px;
-
-  background: rgba(114, 102, 102, 0.52);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(11.5px);
-  -webkit-backdrop-filter: blur(11.5px);
-  border: 1px solid rgba(114, 102, 102, 0.68);
+  color: #fff;
+  font-family: Roboto-Regular;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
 }
 
 .image {
   margin-top: 30px;
-  background-image: url('../../public/assets/myimg.jpeg');
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
+  background-image: url('../../public/assets/myimg.jpg');
+  width: 198px;
+  height: 198px;
+  flex-shrink: 0;
+  border-radius: 3.385px;
+  border: 1.492px solid #fff;
+  background: url('../../public//assets/myimg.jpg'),
+    lightgray 50% / cover no-repeat;
+  box-shadow: 0px 4px 27px 0px rgba(255, 255, 255, 0.25);
   background-size: cover;
 }
 
-.navbar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 150px;
-}
-
-.homebtn {
-  cursor: pointer;
-  width: 200px;
-  height: 35px;
-
-  margin-bottom: 6vh;
-
-  color: white;
-  font-size: 16px;
-
-  background: rgba(111, 234, 204, 0.72);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(12.2px);
-  -webkit-backdrop-filter: blur(12.2px);
-  border: 1px solid rgba(111, 234, 204, 1);
-}
-
-.projectbtn {
-  cursor: pointer;
-  width: 200px;
-  height: 35px;
-  margin-bottom: 6vh;
-
-  color: white;
-  font-size: 16px;
-
-  background: rgba(111, 234, 204, 0.72);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(12.2px);
-  -webkit-backdrop-filter: blur(12.2px);
-  border: 1px solid rgba(111, 234, 204, 1);
-}
-
-.cvbtn {
-  cursor: pointer;
-  width: 200px;
-  height: 35px;
-  margin-bottom: 30px;
-
-  color: white;
-  font-size: 16px;
-
-  background: rgba(111, 234, 204, 0.72);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(12.2px);
-  -webkit-backdrop-filter: blur(12.2px);
-  border: 1px solid rgba(111, 234, 204, 1);
+.name {
+  align-self: stretch;
+  color: #fff;
+  font-family: Roboto-Regular;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-top: 13px;
 }
