--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,6 @@ iframe {
 body {
   background-image: url('../public/assets/bg-img.jpg');
   background-size: cover;
-  overflow: hidden;
+
+  background-position: center;
 }
