--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -7,10 +7,15 @@
   display: flex;
   width: auto;
   height: 60px;
+  width: 100%;
   flex-shrink: 0;
 
   border-bottom: 1px solid #fff;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.914);
+
+  position: fixed;
+  top: 0;
+  z-index: 1;
 }
 
 .buttons {
