--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Roboto-Regular';
-  src: url('../fonts/Roboto-Regular.ttf');
+  // src: url('../fonts/Roboto-Regular.ttf');
+  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap');
 }
 
 .projetcs-box {
@@ -8,7 +9,7 @@
   position: absolute;
 
   top: 10px;
-  margin-left: 400px;
+  margin-left: 330px;
   margin-top: 58px;
   width: 75vw;
 }
@@ -16,7 +17,8 @@
 .allcontainer {
   display: flex;
   flex-direction: column;
-  width: 1300px;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 .card-container {
@@ -42,14 +44,12 @@
 
 .card {
   display: flex;
-  position: relative;
   flex-direction: column;
-
-  align-items: center;
+  padding: 0;
   flex-wrap: wrap;
 
   width: 220px;
-  height: 280px;
+  height: 241px;
 
   background-color: transparent;
   cursor: pointer;
@@ -59,12 +59,17 @@
     box-shadow: 0px 6px 25px 0px rgba(0, 0, 0, 0.2);
   }
 
-  background: rgb(60, 34, 34);
-
   border: none;
-  // box-shadow: 0px 4px 20px 0px rgba(255, 111, 97, 0.8);
+  box-shadow: 0px 4px 20px 0px rgba(202, 200, 200, 0.549);
 
-  transition: box-shadow 0.3s ease;
+  border-radius: 4px;
+  border: 1.244px solid #fff;
+  background: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.3) 0%,
+      rgba(255, 255, 255, 0.3) 100%
+    ),
+    #141318;
 }
 
 .card-title {
@@ -72,17 +77,26 @@
   align-items: center;
   justify-content: center;
 
-  margin-top: 15px;
-  color: aliceblue;
+  margin-top: 0;
+  width: 100%;
+  height: 47px;
 
-  font-size: 16px;
+  background: #fff;
+
+  color: #3d3d3d;
+  font-family: Roboto-Regular;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .card-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 55%;
-  background: url('../img/ticTacToe.png'),
-    lightgray -2976.6px -1202.24px / 1590% 1188.608% no-repeat;
+  height: 100px;
 
   background-size: contain;
   background-repeat: no-repeat;
@@ -104,72 +118,57 @@
 
 .tech-box {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
-  align-items: flex-start;
-  flex-direction: row;
-  width: 80%;
+  justify-content: space-evenly;
+  align-content: space-around;
+  width: 100%;
 }
 
-.tech {
+.tech-1,
+.tech-2 {
+  margin-bottom: 12px;
+}
+
+.tech-1,
+.tech-2,
+.tech-3,
+.tech-4 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
-
-  color: aliceblue;
+  font-family: Roboto-Regular;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  flex-shrink: 0;
+  border-radius: 4px;
+  width: 60px;
+  height: 20px;
 }
 
 .tech-1 {
-  width: 60px;
-  height: 20px;
-
-  background: rgba(39, 179, 234, 0.73);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6.6px);
-  -webkit-backdrop-filter: blur(6.6px);
-  border: 1px solid rgba(39, 180, 234, 0.16);
+  color: #ffe297;
+  border: 2.75px solid #ffe297;
+  background: rgba(255, 226, 151, 0.2);
 }
 
 .tech-2 {
-  width: 60px;
-  height: 20px;
-
-  background: rgba(139, 142, 11, 0.477);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6.6px);
-  -webkit-backdrop-filter: blur(6.6px);
-  border: 1px solid rgba(101, 103, 8, 0.58);
+  width: 75px;
+  color: #a8defc;
+  border: 2.75px solid #a8defc;
+  background: rgba(168, 222, 252, 0.2);
 }
+
 .tech-3 {
-  width: 60px;
-  height: 20px;
-
-  background: rgba(207, 17, 166, 0.759);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6.6px);
-  -webkit-backdrop-filter: blur(6.6px);
-  border: 1px solid rgba(234, 41, 191, 0.16);
+  width: 75px;
+  color: #feb7ff;
+  border: 2.75px solid #feb7ff;
+  background: rgba(254, 183, 255, 0.2);
 }
+
 .tech-4 {
-  width: 60px;
-  height: 20px;
-
-  background: rgba(41, 234, 51, 0.754);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6.6px);
-  -webkit-backdrop-filter: blur(6.6px);
-  border: 1px solid rgba(41, 234, 50, 0.16);
-}
-.tech- {
-  width: 60px;
-  height: 20px;
-}
-.tech- {
-  width: 60px;
-  height: 20px;
+  color: #bdfaa7;
+  border: 2.75px solid #bdfaa7;
+  background: rgba(189, 250, 167, 0.2);
 }
