updated some things

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,8 @@ iframe {
 body {
   background-image: url('../public/assets/bg-img.jpg');
   background-size: cover;
-
   background-position: center;
+
+  margin: 0;
+  padding: 0;
 }
