--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -6,7 +6,7 @@
 
 .projetcs-box {
   display: flex;
-  position: absolute;
+  flex-direction: column;
 
   top: 10px;
   margin-left: 330px;
@@ -19,11 +19,15 @@
   flex-direction: column;
   width: 100%;
   flex-wrap: wrap;
+  @media (max-width: 586px) {
+    width: 50%;
+  }
 }
 
 .card-container {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 
   flex-direction: row;
 }
@@ -46,7 +50,7 @@
   display: flex;
   flex-direction: column;
   padding: 0;
-  flex-wrap: wrap;
+  margin-bottom: 30px;
 
   width: 220px;
   height: 241px;
@@ -119,14 +123,19 @@
 .tech-box {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-content: space-around;
+  justify-content: center;
+
   width: 100%;
 }
 
 .tech-1,
 .tech-2 {
   margin-bottom: 12px;
+}
+
+.tech-1,
+.tech-3 {
+  margin-right: 8px;
 }
 
 .tech-1,
